fix cutting off left side on small screens

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,22 @@
 .container {
-  width: 97%;
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: center; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  width: 100%;
   margin: 0 auto;
-  display: grid;
+  /* display: grid;
   grid-template-columns: 1fr auto 1fr;
   grid-template-rows: repeat(3, auto);
   grid-template-areas: 
     "header header header" 
     "body body body"
-    "footer footer footer";
+    "footer footer footer"; */
+    /* overflow-x: auto; */
   }
   
-  cza-header {
+  /* cza-header {
     grid-area: header;
   }
   
@@ -29,10 +35,24 @@
         "body body body"
         "footer footer footer";
   }
+} */
+
+@media only screen and (min-width: 720px) {
+  .container {
+    width: 95%;
+  }
 }
 
 @media only screen and (min-width: 1000px) {
   .container {
     width: 80%;
   }
+}
+
+cza-header {
+  margin: 0 auto;
+}
+
+cza-footer {
+  flex: 1;
 }
